Show up to 3 subsystems in issue list

--- a/src/app/style/issues-list-widget.css
+++ b/src/app/style/issues-list-widget.css
@@ -60,6 +60,31 @@
   line-height: 13px;
 }
 
+.issues-list-widget__colored-field-wide {
+  position: absolute;
+  top: 6px;
+
+  display: inline-block;
+
+  width: 30px;
+  height: 13px;
+
+  cursor: default;
+
+  text-align: center;
+  vertical-align: text-bottom;
+  white-space: nowrap;
+
+  border: 1px solid transparent;
+  border-radius: 2px;
+
+  background-color: var(--ring-sidebar-background-color);
+
+  font-size: 10px;
+
+  line-height: 13px;
+}
+
 .issues-list-widget__issue-toggler {
   position: absolute;
   top: 2px;
