Added new element type on line; refactoring of solution

--- a/src/app/style/issues-list-widget.css
+++ b/src/app/style/issues-list-widget.css
@@ -61,7 +61,7 @@
 }
 
 .issues-list-widget__colored-field-wide {
-  position: absolute;
+  /*position: absolute;*/
   top: 6px;
 
   display: inline-block;
